crates/lulu-prep/tests/snapshots/fixture_snapshots__zero_pages.snap
---
source: crates/lulu-prep/tests/fixture_snapshots.rs
expression: report.normalized_for_diff()
---
{
  "catalog_fetch_date": "2026-09-03",
  "detected_tools": [],
  "findings": [
    {
      "code": "page-count.below-minimum",
      "expected": ">= 32",
      "fixable": true,
      "message": "0 pages is below this product's 32-page minimum; 32 blank page(s) would be appended to reach 32",
      "observed": "0",
      "severity": "blocking"
    }
  ],
  "generated_at": null,
  "page_count": 0,
  "product_sku": "0600X0900.BW.STD.PB.060UW444.MXX",
  "schema_version": 1,
  "stages": [],
  "tool_version": "0.1.0"
}
